<resources>
    <string name="app_title_new">Scribe</string>
    <string name="app_name">Scribe - Language Keyboards</string>
    <string name="app_launcher_name">Scribe</string>
    <string name="redirection_note">Thanks for downloading Scribe! Please enable keyboards on the
        next screen, and press \'Back\' when finished.</string>
    <string name="change_keyboard">Enable Keyboard</string>
    <string name="scribe_key">Scribe Key</string>
    <string name="command_bar">Command Bar</string>
    <string name="manage_clipboard_items">Manage clipboard items</string>
    <string name="manage_clipboard_empty">Your clipboard is empty.</string>
    <string name="manage_clipboard_label">Once you copy some text, it will show up here. You can
        also pin clips so they won\'t disappear later.</string>
    <string name="clear_clipboard_data">Clear clipboard data</string>
    <string name="clear_clipboard_data_confirmation">Are you sure you want to clear the clipboard
        data?</string>
    <string name="clipboard">Clipboard</string>
    <string name="clipboard_recent">Recent</string>
    <string name="clipboard_current">Current</string>
    <string name="clipboard_pinned">Pinned</string>
    <string name="add_new_item">Add a new item</string>
    <string name="manage_clips">You can manage or add clips here for quick access.</string>
    <string name="clip_text">Clip text</string>
    <string name="pin_text">Pin text</string>
    <string name="text_pinned">Text has been pinned</string>
    <string name="export_clipboard_items">Export clipboard items</string>
    <string name="import_clipboard_items">Import clipboard items</string>
    <string name="keycode_delete">Delete</string>
    <string name="keycode_mode_change">Change keyboard type</string>
    <string name="keycode_shift">Shift</string>
    <string name="keycode_enter">Enter</string>
    <string name="show_clipboard_content">Show clipboard content if available</string>
    <string name="show_popup">Show a popup on keypress</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="keyboard_language">Keyboard language</string>
    <string name="dark_mode">Dark theme</string>
    <string name="period_on_space_bar">Double Tap on SpaceBar for Period</string>
    <string name="app_title">Scribe - Language Keyboards</string>
    <string name="app_short_description">Keyboards that help second language learners communicate
        with confidence.</string>
    <string name="app_long_description">
        Scribe is a pack of Android and F-Droid keyboards for language learners.

        Included languages are French, German, Italian, Portuguese, Russian, Spanish and Swedish.
        With Scribe keyboards a user can translate from English, select verb conjugations, find
        plurals of nouns, and see nouns and prepositions annotated to help with genders and cases.
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nothing">Nothing</string>
    <string name="later">Later</string>
    <string name="save_as">Save as</string>
    <string name="file_saved">File saved successfully</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="out_of_memory_error">Out of memory error</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="error">Error: %s</string>
    <string name="open_with">Open with</string>
    <string name="edit_with">Edit with</string>
    <string name="edit">Edit</string>
    <string name="no_app_found">No valid app found</string>
    <string name="set_as">Set as</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
    <string name="value_copied_to_clipboard_show">Value copied to clipboard:\n%s</string>
    <string name="dial_number">Dial number</string>
    <string name="unknown">Unknown</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="deleting_folder">Deleting folder \'%s\'</string>
    <string name="none">None</string>
    <string name="label">Label</string>
    <string name="transparent">Transparent</string>
    <string name="transparent_color">Transparent color</string>
    <string name="select_a_different_color">Select a different color</string>
    <string name="download">Download</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="previous">Previous</string>
    <string name="playpause">Play / Pause</string>
    <string name="next">Next</string>
    <string name="number">Number</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="request_the_required_permissions">Request the required permissions</string>
    <string name="no_access_to_contacts">The app could not access your contacts</string>
    <string name="no_phone_call_permission">App does not have the permission to initiate phone
        calls, please grant it in the device settings</string>
    <string name="insert_text_here">Insert text here</string>
    <string name="call_person">Call %s</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="value_cannot_be_empty">Value cannot be empty</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="mobile">Mobile</string>
    <string name="main_number">Main</string>
    <string name="work_fax">Work Fax</string>
    <string name="home_fax">Home Fax</string>
    <string name="pager">Pager</string>
    <string name="no_phone_number_found">No phone number has been found</string>
    <string name="change_view_type">Change view type</string>
    <string name="grid">Grid</string>
    <string name="uneven_grid">Uneven Grid</string>
    <string name="list">List</string>
    <string name="increase_column_count">Increase column count</string>
    <string name="reduce_column_count">Reduce column count</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="select_photo">Select photo</string>
    <string name="manage_blocked_numbers">Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="export_blocked_numbers">Export blocked numbers</string>
    <string name="import_blocked_numbers">Import blocked numbers</string>
    <string name="must_make_default_dialer">You have to make this app the default dialer app to make
        use of blocked numbers.</string>
    <string name="set_as_default">Set as default</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="search">Search</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="filter">Filter</string>
    <string name="no_items_found">No items found.</string>
    <string name="change_filter">Change filter</string>
    <string name="no_storage_permissions">Storage permission is required</string>
    <string name="no_contacts_permission">Contacts permission is required</string>
    <string name="no_camera_permissions">Camera permission is required</string>
    <string name="no_audio_permissions">Audio permission is required</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="rename_file_error">Could not rename the file</string>
    <string name="rename_folder_error">Could not rename the folder</string>
    <string name="rename_folder_empty">Folder name must not be empty</string>
    <string name="rename_folder_exists">A folder with that name already exists</string>
    <string name="rename_folder_root">Cannot rename the root folder of a storage</string>
    <string name="rename_folder_ok">Folder renamed successfully</string>
    <string name="renaming_folder">Renaming folder</string>
    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
    <string name="filename_invalid_characters">Filename contains invalid characters</string>
    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid
        characters</string>
    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
    <string name="prepend_filenames">Prepend filenames</string>
    <string name="append_filenames">Append filenames</string>
    <string name="simple_renaming">Simple renaming</string>
    <string name="pattern_renaming">Pattern</string>
    <string name="string_to_add">String to add</string>
    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m -
        minute\n%s - second\n%i - number increasing from 1</string>
    <string name="filename_without_txt">Filename (without .txt)</string>
    <string name="filename_without_json">Filename (without .json)</string>
    <string name="cannot_hide_files">Starting from Android 11 you cannot hide files and folders like
        that anymore</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="copy_move">Copy / Move</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="select_destination">Select destination</string>
    <string name="translation_english">English</string>
    <string name="wikipedia_and_scribe">Wikipedia is a multilingual free online encyclopedia written and maintained by a community of volunteers through open collaboration and a wiki-based editing system. Scribe uses data from Wikipedia to produce autosuggestions by deriving the most common words in a language as well as the most common words that follow them.</string>
    <string name="wikidata_and_scribe">Wikidata is a collaboratively edited multilingual knowledge graph hosted by the Wikimedia Foundation. It provides freely available data that anyone can use under a Creative Commons Public Domain license (CC0). Scribe uses language data from Wikidata to provide users with verb conjugations, noun-form annotations, noun plurals, and many other features</string>
    <string name="scribe_wikimedia">Scribe would not be possible without countless contributions by Wikimedia contributors to the many projects that they support. Specifically Scribe makes use of data from the Wikidata Lexicographical data community, as well as data from Wikipedia for each language that Scribe supports.</string>
    <string name="wikimedia_and_scribe_title">How we work together</string>
    <string name="wikimedia_logo">Wikimedia Logo</string>
</resources>