<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/you_background_color">

    <LinearLayout
        android:id="@+id/settings_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/you_background_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/settings_general_settings_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:background="@drawable/section_holder_stroke"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/settings_vibrate_on_keypress_holder"
                style="@style/SettingsHolderCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_background">

                <org.scribe.views.MyAppCompatCheckbox
                    android:id="@+id/settings_vibrate_on_keypress"
                    style="@style/SettingsCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate_on_keypress"
                    android:textColor="@color/app_text_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_show_popup_on_keypress_holder"
                style="@style/SettingsHolderCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_background">

                <org.scribe.views.MyAppCompatCheckbox
                    android:id="@+id/settings_show_popup_on_keypress"
                    style="@style/SettingsCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_popup"
                    android:textColorLink="#E1DCDC" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_keyboard_language_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bottom_corners">

                <org.scribe.views.MyTextView
                    android:id="@+id/settings_keyboard_language_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard_language"
                    android:textColor="@color/you_neutral_text_color" />

                <org.scribe.views.MyTextView
                    android:id="@+id/settings_keyboard_language"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_keyboard_language_label"
                    tools:text="@string/translation_english" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_dark_mode_holder"
                style="@style/SettingsHolderCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_background">

                <org.scribe.views.MyAppCompatCheckbox
                    android:id="@+id/settings_dark_mode"
                    style="@style/SettingsCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:textColor="@color/you_neutral_text_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_period_on_space_bar_holder"
                style="@style/SettingsHolderCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_background">

                <org.scribe.views.MyAppCompatCheckbox
                    android:id="@+id/settings_period_on_space_bar"
                    style="@style/SettingsCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period_on_space_bar"
                    android:textColor="@color/you_neutral_text_color" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
